--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/CartPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/CartPartial.cshtml
@@ -9,7 +9,7 @@
         <div class="cart-products">
             <h4 class="title">Shopping cart</h4>
             <div id="productItem">
-                <div class="single-product-item">
+                @*<div class="single-product-item">
                     <div class="thumb">
                         <a href="#0"><img src="~/assetsIndex/images/shop/shop01.jpg" alt="shop"></a>
                     </div>
@@ -58,7 +58,7 @@
                         <div class="price"><span class="pprice">$80.00</span> <del class="dprice">$120.00</del></div>
                         <a href="#" class="remove-cart">Remove</a>
                     </div>
-                </div>
+                </div>*@
             </div>
                 <div class="btn-wrapper text-center">
                     <a href="#0" class="custom-button"><span>Checkout</span></a>
