--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/ProductDetail.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/ProductDetail.cshtml
@@ -99,11 +99,20 @@
                 <div class="product-details-content">
                     <div class="product-details-header">
                         <h2 class="title" id="title">The Breeze Zodiac IX</h2>
-                        <ul>
-                            <li>Listing ID: 14076242</li>
-                            <li>Item #: 7300-3356862</li>
-                        </ul>
                     </div>
+                    <div id="rating">
+                        <input type="radio" name="rate" value="5" id="rate-5"/>
+                        <label for="rate-5" class="fas fa-star"></label>
+                        <input type="radio" name="rate" value="4" id="rate-4" />
+                        <label for="rate-4" class="fas fa-star"></label>
+                        <input type="radio" name="rate" value="3" id="rate-3" />
+                        <label for="rate-3" class="fas fa-star"></label>
+                        <input type="radio" name="rate" value="2" id="rate-2" />
+                        <label for="rate-2" class="fas fa-star"></label>
+                        <input type="radio" name="rate" value="1" id="rate-1" />
+                        <label for="rate-1" class="fas fa-star"></label>
+                    </div> 
+                    
                     <ul class="price-table mb-30">
                         <li class="header">
                             <h5 class="current">Current Price</h5>
@@ -624,7 +633,6 @@
                 </div>
             </div>
         </div>
-    </div>
     </div>
 </section>
 <!--============= Product Details Section Ends Here =============-->
