--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/AdminLayout/ContentHeaderPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/AdminLayout/ContentHeaderPartial.cshtml
@@ -2,12 +2,19 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1>Blank Page</h1>
+                <h1>@ViewData["Title"]</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item active">Blank Page</li>
+                    <li class="breadcrumb-item"><a href="admin">Dashboard</a></li>
+                    @if (ViewData["Title"].Equals("Customer") || ViewData["Title"].Equals("Artist"))
+                    {
+                        <li class="breadcrumb-item disabled">User</li>
+                    }
+                    @if (!ViewData["Title"].Equals("Dashboard"))
+                    {
+                        <li class="breadcrumb-item active">@ViewData["Title"]</li>
+                    }
                 </ol>
             </div>
         </div>
