--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/AdminLayout/MainSideBarPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/AdminLayout/MainSideBarPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿<aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="index" class="brand-link">
+    <a href="/admin" class="brand-link">
         <img src="~/assets/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
         <span class="brand-text font-weight-light">Art Admin</span>
     </a>
@@ -13,7 +13,7 @@
                 <img src="~/assets/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
-                <a href="Login" class="d-block">Alexander Pierce</a>
+                <a href="#" class="d-block">Alexander Pierce</a>
             </div>
         </div>
 
@@ -33,58 +33,52 @@
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                 <!-- Add icons to the links using the .nav-icon class
-                 with font-awesome or any other icon font library -->
+     with font-awesome or any other icon font library -->
+                @*<li class="nav-item">
+            <a href="#" class="nav-link">
+                <i class="nav-icon fas fa-edit"></i>
+                <p>
+                    Forms
+                    <i class="fas fa-angle-left right"></i>
+                </p>
+            </a>
+            <ul class="nav nav-treeview">
+                <li class="nav-item">
+                    <a href="Form" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Form Example</p>
+                    </a>
+                </li>
+            </ul>
+        </li>*@
                 <li class="nav-item">
                     <a href="#" class="nav-link">
-                        <i class="nav-icon fas fa-edit"></i>
+                        <i class="nav-icon fas fa-user"></i>
                         <p>
-                            Forms
+                            User
                             <i class="fas fa-angle-left right"></i>
                         </p>
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a href="Form" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Form Example</p>
+                            <a href="/artist/list" class="nav-link">
+                                <i class="far fa-circle nav-icon text-success"></i>
+                                <p>Artist</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/customer/list" class="nav-link">
+                                <i class="far fa-circle nav-icon text-danger"></i>
+                                <p>Customer</p>
                             </a>
                         </li>
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
-                        <i class="nav-icon fas fa-table"></i>
-                        <p>
-                            Tables
-                            <i class="fas fa-angle-left right"></i>
-                        </p>
+                    <a href="/user/list" class="nav-link">
+                        <i class="nav-icon fas fa-user"></i>
+                        <p>Account</p>
                     </a>
-                    <ul class="nav nav-treeview">
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="far fa-circle nav-icon text-success"></i>
-                                <p>Add</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="far fa-circle nav-icon text-danger"></i>
-                                <p>Delete</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="far fa-circle nav-icon text-warning"></i>
-                                <p>Edit</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="far fa-circle nav-icon text-info"></i>
-                                <p>List</p>
-                            </a>
-                        </li>
-                    </ul>
                 </li>
             </ul>
         </nav>
