--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/AdminLayout/ScriptPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/AdminLayout/ScriptPartial.cshtml
@@ -1,9 +1,49 @@
-﻿    <!-- ./wrapper -->
-<!-- jQuery -->
-<script src="~/assets/js/jquery.min.js"></script>
+﻿<!-- jQuery -->
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="~/assets/js/bootstrap.bundle.min.js"></script>
 <!-- AdminLTE App -->
 <script src="~/assets/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="~/assets/js/demo.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
+<!-- DataTables -->
+<script src="~/plugins/datatables/jquery.dataTables.min.js"></script>
+<script src="~/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
+<script src="~/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
+<script src="~/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
+<script>
+    $(function () {
+        $("#user").DataTable({
+            "responsive": true,
+            "autoWidth": false,
+            "pageLength": 5,
+            "scrollX": true,
+            "ordering": false,
+            "columnDefs": [
+                { "width": "11.75%", "targets": 5 }
+            ]
+        });
+        $("#customer").DataTable({
+            "responsive": true,
+            "autoWidth": false,
+            "pageLength": 2,
+            "scrollX": true,
+            "ordering": false,
+            "columnDefs": [
+                { "width": "11.75%", "targets": 7 }
+            ]
+        });
+        $("#artist").DataTable({
+            "responsive": true,
+            "autoWidth": false,
+            "pageLength": 5,
+            "scrollX": true,
+            "ordering": false,
+            "columnDefs": [
+                { "width": "11.75%", "targets": 7 }
+            ]
+        });
+    });
+</script>
