--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/SignIn.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/SignIn.cshtml
@@ -1,4 +1,5 @@
 ﻿@{Layout = "~/Views/UserLayout/MainLayout.cshtml";}
+
 <!--============= Hero Section Starts Here =============-->
 <div class="hero-section">
     <div class="container">
@@ -37,23 +38,29 @@
                 <div class="or">
                     <span>Or</span>
                 </div>
-                <form class="login-form">
+                <form class="login-form" method="POST">
                     <div class="form-group mb-30">
-                        <label for="login-email"><i class="far fa-envelope"></i></label>
-                        <input type="text" id="login-email" placeholder="Email Address">
+                        <label for="username"><i class="far fa-envelope"></i></label>
+                        <input type="text" id="username" name="username" placeholder="Username">
                     </div>
                     <div class="form-group">
-                        <label for="login-pass"><i class="fas fa-lock"></i></label>
-                        <input type="password" id="login-pass" placeholder="Password">
+                        <label for="password"><i class="fas fa-lock"></i></label>
+                        <input type="password" id="password" name="password" placeholder="Password">
                         <span class="pass-type"><i class="fas fa-eye"></i></span>
                     </div>
                     <div class="form-group">
                         <a href="#0">Forgot Password?</a>
                     </div>
                     <div class="form-group mb-0">
-                        <button type="submit" class="custom-button">LOG IN</button>
+                        <button type="submit" id="btnLogin" class="custom-button">LOG IN</button>
                     </div>
                 </form>
+                @if (ViewBag.Error != null)
+                {
+                    <script type="text/javascript">
+                        alert("@ViewBag.Error");
+                    </script>
+                }
             </div>
             <div class="right-side cl-white">
                 <div class="section-header mb-0">
