--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Customer/AddOrEdit.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Customer/AddOrEdit.cshtml
@@ -51,6 +51,9 @@
                 <input asp-for="Interest" class="form-control" />
                 <span asp-validation-for="Interest" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <input type="hidden" asp-for="UserId" class="form-control" />
+            </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="Active" /> Active
@@ -62,13 +65,6 @@
         </form>
     </div>
 </div>
-
-<script>
-    $('#select-membertype').on('change', function () {
-        $('#membertype').val($('#select-membertype').val());
-    });
-    $('#select-membertype').val($('#membertype').val());
-</script>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
