CRUD Artwork, ArtCategory, Exhibition, Payment, Status

--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/AdminLayout/MainSideBarPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/AdminLayout/MainSideBarPartial.cshtml
@@ -33,7 +33,7 @@
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                 <!-- Add icons to the links using the .nav-icon class
-     with font-awesome or any other icon font library -->
+    with font-awesome or any other icon font library -->
                 @*<li class="nav-item">
             <a href="#" class="nav-link">
                 <i class="nav-icon fas fa-edit"></i>
@@ -78,6 +78,36 @@
                     <a href="/user/list" class="nav-link">
                         <i class="nav-icon fas fa-user"></i>
                         <p>Account</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/artwork/list" class="nav-link">
+                        <i class="nav-icon fas fa-palette"></i>
+                        <p>Artwork</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/Exhibition/list" class="nav-link">
+                        <i class="nav-icon fas fa-eye"></i>
+                        <p>Exhibition</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/artcategory/list" class="nav-link">
+                        <i class="nav-icon fas fa-list"></i>
+                        <p>Art Category</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/payment/list" class="nav-link">
+                        <i class="nav-icon fas fa-money-check-alt"></i>
+                        <p>Payment</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/status/list" class="nav-link">
+                        <i class="nav-icon fas fa-question-circle"></i>
+                        <p>Transaction Status</p>
                     </a>
                 </li>
             </ul>
