--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/ProductDetail.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/ProductDetail.cshtml
@@ -112,7 +112,10 @@
                         <input type="radio" name="rate" value="1" id="rate-1" />
                         <label for="rate-1" class="fas fa-star"></label>
                     </div> 
-                    
+                    <form class="product-bid-form" style="margin-bottom:15px">
+                        <input type="text" placeholder="Enter you comment">
+                        <button type="submit" class="custom-button" id="btnComent">Submit comment</button>
+                    </form>
                     <ul class="price-table mb-30">
                         <li class="header">
                             <h5 class="current">Current Price</h5>
@@ -220,7 +223,7 @@
                         <div class="thumb">
                             <img src="~/assetsIndex/images/product/tab2.png" alt="product">
                         </div>
-                        <div class="content">Delivery Options</div>
+                        <div class="content">Comment & rate</div>
                     </a>
                 </li>
                 <li>
@@ -402,40 +405,48 @@
             <div class="tab-pane fade show" id="delevery">
                 <div class="shipping-wrapper">
                     <div class="item">
-                        <h5 class="title">shipping</h5>
+                        <h5 class="title">Comment & rate</h5>
                         <div class="table-wrapper">
-                            <table class="shipping-table">
-                                <thead>
-                                    <tr>
-                                        <th>Available delivery methods </th>
-                                        <th>Price</th>
-                                    </tr>
-                                </thead>
+                            <table class="shipping-table" style="margin:auto">
                                 <tbody>
                                     <tr>
-                                        <td>Customer Pick-up (within 10 days)</td>
-                                        <td>$0.00</td>
+                                        <td>
+                                            <i class="fa fa-user" aria-hidden="true"></i>
+                                            <span><b>UserName</b></span>
+                                            <br />
+                                            <span id="comment" style="margin-left:20px">Sản Phẩm như quần què</span>
+                                        </td>
+                                        <td>
+                                            4<i class="fa fa-star" aria-hidden="true"></i>
+                                        </td>
                                     </tr>
                                     <tr>
-                                        <td>Standard Shipping (5-7 business days)</td>
-                                        <td>Not Applicable</td>
+                                        <td>
+                                            <i class="fa fa-user" aria-hidden="true"></i>
+                                            <span><b>UserName</b></span>
+                                            <br />
+                                            <span id="comment" style="margin-left:20px">Sản Phẩm như quần què</span>
+                                        </td>
+                                        <td>
+                                            4<i class="fa fa-star" aria-hidden="true"></i>
+                                        </td>
                                     </tr>
                                     <tr>
-                                        <td>Expedited Shipping (2-4 business days)</td>
-                                        <td>Not Applicable</td>
+                                        <td>
+                                            <i class="fa fa-user" aria-hidden="true"></i>
+                                            <span><b>UserName</b></span>
+                                            <br />
+                                            <span id="comment" style="margin-left:20px">Sản Phẩm như quần què</span>
+                                        </td>
+                                        <td>
+                                            4<i class="fa fa-star" aria-hidden="true"></i>
+                                        </td>
                                     </tr>
                                 </tbody>
                             </table>
                         </div>
                     </div>
-                    <div class="item">
-                        <h5 class="title">Notes</h5>
-                        <p>
-                            Please carefully review our shipping and returns policy before committing to a bid.
-                            From time to time, and at its sole discretion, Sbidu may change the prevailing fee
-                            structure for shipping and handling.
-                        </p>
-                    </div>
+
                 </div>
             </div>
             <div class="tab-pane fade show" id="history">
