--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/ProductDetail.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/ProductDetail.cshtml
@@ -407,7 +407,7 @@
                     <div class="item">
                         <h5 class="title">Comment & rate</h5>
                         <div class="table-wrapper">
-                            <table class="shipping-table" style="margin:auto">
+                            <table class="shipping-table" style="margin-left:15px">
                                 <tbody>
                                     <tr>
                                         <td>
