--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/HeaderTopPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/HeaderTopPartial.cshtml
@@ -64,6 +64,9 @@
                         <a href="Home">Home</a>
                     </li>
                     <li>
+                        <a href="Gallery">Gallery</a>
+                    </li>
+                    <li>
                         <a href="product.html">Auction</a>
                     </li>
                     <li>
