--- a/eProject/OnlineArtGallery/OnlineArtGallery/wwwroot/assetsIndex/css/main.css
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/wwwroot/assetsIndex/css/main.css
@@ -7377,8 +7377,8 @@ div[class*="auction"] .custom-button {
 }
 
 .shipping-table {
-    width: 100%;
-    max-width: 800px;
+    margin-top:15px;
+    width: 90%;
     border: 1px solid #eaeaea;
 }
 
