Update Artwork and Add Auction (not yet Detail)

--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/AdminLayout/MainSideBarPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/AdminLayout/MainSideBarPartial.cshtml
@@ -87,6 +87,12 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a href="/auction/list" class="nav-link">
+                        <i class="nav-icon fab fa-sellcast"></i>
+                        <p>Auction</p>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="/Exhibition/list" class="nav-link">
                         <i class="nav-icon fas fa-eye"></i>
                         <p>Exhibition</p>
