--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Artwork/AddOrEdit.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Artwork/AddOrEdit.cshtml
@@ -33,6 +33,7 @@
             </div>
             <input type="hidden" asp-for="Image" value="@Model.Image" />
             <input type="hidden" asp-for="ArtistId" value="@Model.ArtistId" />
+            <input type="hidden" asp-for="CreateDay" value="@Model.CreateDay" />
             <div class="form-group">
                 <label asp-for="Size" class="control-label"></label>
                 <input asp-for="Size" class="form-control" />
