--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/HeaderTopPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/HeaderTopPartial.cshtml
@@ -67,7 +67,7 @@
                         <a href="Gallery">Gallery</a>
                     </li>
                     <li>
-                        <a href="product.html">Auction</a>
+                        <a href="/Index/auction">Auction</a>
                     </li>
                     <li>
                         <a href="#0">Pages</a>
