Update Gallery and Artworkdetail

--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/HeaderTopPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/HeaderTopPartial.cshtml
@@ -64,7 +64,7 @@
                         <a href="Home">Home</a>
                     </li>
                     <li>
-                        <a href="Gallery">Gallery</a>
+                        <a href="/Index/Gallery">Gallery</a>
                     </li>
                     <li>
                         <a href="/Index/auction">Auction</a>
