cart và payment nhé a em

--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/CartPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/CartPartial.cshtml
@@ -61,7 +61,7 @@
                 </div>*@
             </div>
                 <div class="btn-wrapper text-center">
-                    <a href="#0" class="custom-button"><span>Checkout</span></a>
+                    <a href="Cart" class="custom-button"><span>Checkout</span></a>
                 </div>
             </div>
     </div>
